/* Interactive script based on the previous one */

--- a/Backup.mw
+++ b/Backup.mw
@@ -117,7 +117,7 @@ ${DFU} -a u-boot -R -U ${BACKUP_DIR}u-boot-${DATE}.bin
 ${DFU} -a u-boot_env -R -U ${BACKUP_DIR}u-boot_env-${DATE}.bin
 </pre>
 
-===Interactive script based on the previous one===
+===Interactive script===
 
 This script is based on the above "Simple backup script" (by unknown). It does the backup of what you want and choose promting you for choices. Enjoy it! test it! contribute! You can find us at /server irc.freenode.net /j #openmoko and we'll be pleased to accept you help (ideas || code).                                
 
