--- a/Backup.mw
+++ b/Backup.mw
@@ -121,6 +121,8 @@ ${DFU} -a u-boot_env -R -U ${BACKUP_DIR}u-boot_env-${DATE}.bin
 
 This script is based on the above "Simple backup script" (by unknown). It does the backup of what you want and choose promting you for choices. Enjoy it! test it! contribute! You can find us at /server irc.freenode.net /j #openmoko and we'll be pleased to accept you help (ideas || code).                                
 
+NOTE that the script works for me(tm) but it still needs some love. especially on traps and catches for wrong choices.
+
 <pre>
 #!/bin/bash
 
