--- a/Getting_Openmoko.mw
+++ b/Getting_Openmoko.mw
@@ -1,7 +1,7 @@
 If you want a phone that runs [[Openmoko]] you can either buy the [[Neo FreeRunner]] or you can install Openmoko on a [[Openmoko-supported hardware|supported device]]. Note that much of the software is still under development and not suited for regular users yet. For learning about what you can and cannot do with the current types of software please see [[Distributions#Features by distribution/release target|Features of the distributions]].
 
 ==Buying Neo FreeRunner==
-If you buy a Neo FreeRunner now, [[Openmoko2007.2]] will be preinstalled. However, you can install a different distribution by [[flashing the Neo FreeRunner]]. 
+If you buy a Neo FreeRunner now, [[Om 2007.2]] will be preinstalled. However, you can install a different distribution by [[flashing the Neo FreeRunner]]. 
 
 You can purchase the FreeRunner from the Openmoko store or from a local distributor. At the Openmoko store the FreeRunner costs US$399. It has a limited warranty for 14 days. If you want an extended warranty you should buy from a distributor.
 
