--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -15,11 +15,12 @@ There is collection of FreeRunner hardware issue wiki page [[Freerunner_Hardware
 
 3. Insert dead battery and let it charge.
 
-'''Q:Unable to flash FreeRunner after booting either into NAND or NOR.'''
-{{note|Please check [[Getting_Started_with_your_Neo_FreeRunner]] for more information about the flashing image.}}
+'''Q: Unable to flash FreeRunner after booting either into NAND or NOR.'''
+'''A:''' {{note|Please check [[Getting_Started_with_your_Neo_FreeRunner]] for more information about the flashing image.}}
  
-I can ssh into the phone via USB per the wiki instructions, but dfu-util does not find the phone. 
+'''Q: I can ssh into the phone via USB per the wiki instructions, but dfu-util does not find the phone. '''  
 
+'''A:'''
 This is what I need to run as root and the everything works fine:
  root(eno,freerunner)# cat upom
  #!/bin/sh
