--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -65,7 +65,7 @@ See [[Neo FreeRunner (GTA02) Battery#Notes_about_expected_battery_life]] and mor
 
 '''Q:''' Once I have such an adapter, can I use it to connect 2 Neo to each other?
 
-'''A:''' ''(please complete this)''
+'''A:''' This question is equivalent to '''How to connect two [Unix/Linux] computers via USB cable and what sort of special cable is needed?''' -> http://www.linuxquestions.org/questions/linux-general-1/connecting-two-computers-with-a-usb-cable-data-cable-411073
 
 === GSM ===
 
