/* Flashing the Kernel */

--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -104,6 +104,8 @@ When flashing succeeds the following will be shown:
  status(0) = No error condition is present
  Done!
 
+Flashing may fail with an error -110. This indicates that the kernel is too big for the default kernel partition. uboot can be used to change the size of the default partitions on the device
+
 == Flashing the Root Filesystem ==
 
 The root filesystem has to be an image in jffs2 format. If the file you downloaded is zipped or compressed (has a .gz or .zip extension) you have to uncompress it first.
