--- a/GSM_network_registration.mw
+++ b/GSM_network_registration.mw
@@ -87,6 +87,8 @@ We'd like to know the real network registration status by our NEO devices in the
 | [[User:Zrich | zrich]]   || Cambridge, MA, USA || Cingular || > 3 Years || GTA02 || Moko7 || Yes || No Problems || No
 |-
 | [[User:Infoport | William Vidrine]]   || Greensboro, NC, USA || AT&T || replaced SIM sold with service Jul-18-08; model 71234 O 4022 || GTA02 || Moko8 || Yes || doesn't try to register on boot; sometimes takes switching on/off to register; re-registers with Home network frequently || No
+|-
+| [[User:robolange | Robert Lange]]   || Philadelphia, PA, USA || AT&T || obtained with AT&T prepaid phone in July 2008; model 71234 O 4022 || GTA02Bv5 || Moko8 || Yes || with probability about 0.2, will register immediately upon boot, otherwise you have to reboot and try your luck again; seems to be location independent || File not found
 |}
 
 [[Category:Hardware]]
