--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -209,7 +209,7 @@ fi
 org.freesmartphone.GSM.PDP.ActivateContext internet.fido.ca fido
 fido
 |-
-| Canada || Rogers || Any, behind NAT || internet.com || ||
+| Canada || Rogers || Any, behind NAT || internet.com || wapuser1/wap || nameserver 207.181.101.4
 |-
 | Estonia || Elisa || Any, behind NAT || internet || ||
 |-
