/* Flashing the Kernel */

--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -104,7 +104,7 @@ When flashing succeeds the following will be shown:
  status(0) = No error condition is present
  Done!
 
-Flashing may fail with an error -110. This indicates that the kernel is too big for the default kernel partition. uboot can be used to change the size of the default partitions on the device
+Flashing may fail with an error -110. This indicates that the kernel is too big for the default kernel partition. uboot can be used to change the size of the default partitions on the device. It may also mean that you are trying to put the wrong thing in the kernel space.
 
 == Flashing the Root Filesystem ==
 
