--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -41,7 +41,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 
 =Chip Scouting=
 
-
+'''Wireless Peripheral'''
 {|border=1 cellspacing=0
 ! Chip/Module !!Freedom Requirements !! Bussiness Requirements !! Technical Requirements !! Specs
 |-
@@ -52,10 +52,6 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 | Wavecom WMP100 || AT docs open, ability to program new AT commands for everyone with a "free"(ly available) SDK. || Order quantity? || Component is fine, but only supports Class10 GPRS unfortunately (Shawn Aug.11.2008)|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=WMP100 wavecom.com] ([http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=downloads&productName=WMP100 sort of])
 |-
 | Wavecom Q26 Ultra|| same as wmp100 || Order quantity? || GPRS cl10, EDGE cl10, WCDMA, but thick (40x32x6.55mm)|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=Q26_Ultra wavecom's website]
-|-
-| Audience A1010 || No, waiting for answer(Aug.12.2008) || NA  || NA || NA
-|-
-| STM32F103 (MPU) || Full documentation appears to be on Web || ? || Looks promising, see [http://lists.openmoko.org/pipermail/hardware/2008-August/000303.html here] for feature wish list. || [http://www.st.com/mcu/inchtml-pages-stm32.html STM32 (CORTEX M3)]
 |-
 | UC864 (3.5G modem) || Detailed documentation on Web. Can get even for more documentation from reseller. || Any Qty is good. Price depends strongly on the qty. || First impression is good. UC864G includes all known bands '''and GPS receiver''' (saves more space & complications) || [http://www.telit.com/en/products/umts-hsdpa.php?p_id=14&p_ac=show&p=13 UMTS/HSDPA]
 |-
@@ -69,9 +65,26 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Broadcom BCM4325 (WLAN+BT+FM) || NA || NA || Good (Shawn Aug 13) || [http://www.broadcom.com/collateral/pb/4325-PB00-R.pdf]
 |-
+| NA || NA || NA || NA || NA
+|-
+|}
+
+'''Application Processor&MCU'''
+{|border=1 cellspacing=0
+! Chip/Module !!Freedom Requirements !! Bussiness Requirements !! Technical Requirements !! Specs
+|-
+| STM32F103 (MPU) || Full documentation appears to be on Web || ? || Looks promising, see [http://lists.openmoko.org/pipermail/hardware/2008-August/000303.html here] for feature wish list. || [http://www.st.com/mcu/inchtml-pages-stm32.html STM32 (CORTEX M3)]
+|-
 | NXP Nexperia system solution 9100 || The introduction indicates it runs open OS || NA || Highly integration solution || [http://www.nxp.com/acrobat_download/literature/9397/75014596.pdf]
 |-
-| NA || NA || NA || NA || NA
+
+|}
+
+'''Audio'''
+{|border=1 cellspacing=0
+! Chip/Module !!Freedom Requirements !! Bussiness Requirements !! Technical Requirements !! Specs
+|-
+| Audience A1010 || No, waiting for answer(Aug.12.2008) || NA  || NA || NA
 |-
 |}
 
