--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -22,7 +22,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 
 * U-boot porting to GTA03EVB (Matt) '''ONGOING'''
 ** The core can run at 533 MHz with 133MHz SDRAM (Done Aug.12.2008)
-* SIMCOM 3G MODEM Research (Shawn) '''ONHOLD'''
+* Telit 3G MODEM Research (Shawn) '''ONGOING'''
 *
 * GTA03EVB Hardware Verification (Matt & Shawn) '''ONGOING'''
 ** Starts when GTA03EVB is in office (AUG.11.2008)
