--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -63,6 +63,9 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Broadcom BCM4325 (WLAN+BT+FM) || NA || NA || Good (Shawn Aug 13) || [http://www.broadcom.com/collateral/pb/4325-PB00-R.pdf]
 |-
+| Telit UC86 (Global-version) || AT docs open, ability to program new AT commands, provide python interpreter engine || NA || Waiting for evualation board circuit design || NA
+|-
+|-
 | NA || NA || NA || NA || NA
 |-
 |}
