--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -20,16 +20,15 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 
 =Current Tasks=
 
-* U-boot porting to GTA03EVB (Matt) '''ONGOING'''
-** The core can run at 533 MHz with 133MHz SDRAM (Done Aug.12.2008)
 * Telit 3G MODEM Research (Shawn) '''ONGOING'''
-*
+** Waiting for EVB circuit design (Shawn)
 * GTA03EVB Hardware Verification (Matt & Shawn) '''ONGOING'''
-** Starts when GTA03EVB is in office (AUG.11.2008)
+** Started when GTA03EVB is in office (AUG.11.2008)
+** Port kboot to GTA03EVB (Matt) '''ONGOING'''
 ** voltage, power consumption, RF characteristics (finished by end of AUG.22.2008)
 *** Siemens MC 75i EDGE MODEM 
 *** u-blox 5 Antaris GPS (Done Aug.12.2008)
-*** CSR BT
+*** CSR BT 
 *** Accton/Atheros AR6001 Wi-Fi module
 *
 * Implement touchpanel driver for [[GTA|GTA03]] (Matt) '''NOT STARTED'''
@@ -38,6 +37,8 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 * Implement Camera driver for [[GTA|GTA03]] (Matt) '''NOT STARTED'''
 * Hardware Verification of BT module with new firmware (Matt & Shawn) '''NOT STARTED'''
 * Marvell8686 WiFi module (Matt & Shawn) '''NOT STARTED'''
+* U-boot porting to GTA03EVB (Matt) '''Done'''
+** The core can run at 533 MHz with 133MHz SDRAM (Done Aug.12.2008)
 
 =Chip Scouting=
 
