Modified section titles

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -1,6 +1,6 @@
 The GPRS connection is made using the PPP protocol to a server identified by an "APN" at the network operator. 
 
-= Option 1: With GSM Multiplexing =
+= Option 1: With GSM multiplexing and with a GUI =
 
 {{note|The following does not appear to work if you have a SIM PIN.  The dialog to enter your SIM PIN never pops up and the GSM multiplexing daemon continuous loops and runs into a SIM PIN error.}}
 
@@ -26,7 +26,7 @@ You may also have to modify your /etc/resolv.conf file and add the nameserver (D
 
 Then, hopefully, you should be up in running with GPRS and a GUI to turn it on and off.
 
-= Option 2: Without GSM Multiplexing =
+= Option 2: Without GSM multiplexing and without a GUI =
 
 The program that implements PPP on Linux is [[pppd]], which we need to configure and run to get a connection. When that is working, we can configure pppd to wait until it's needed before it connects, and to disconnect if the connection becomes idle. Further, we can start pppd in the background during the boot process.
 
