--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3086,6 +3086,8 @@ How to take:
 
 FAQ:
 
+Q: 各位,要不要再組多一梯的團購,大約九月中下單子? 我趕不上這一次的團購:(  -Cruz
+
 Q: Is it GSM900 or GSM850?
 
 A: Openmoko can provide either GSM900 or GSM850 as required.
