*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -157,13 +157,7 @@ __NOTOC__
 *[[Openmoko SMS Middleware]]
 *[[Zedlock]]
 *[[Navit]]
-
-====Application Guideline====
-*[[Minimo|Building Minimo web browser ]]
-*[[Devirginator]]
-*[[File transfer]]
-*[[Getting GPS console output with gllin]]
-*[[Getting Started with your Neo FreeRunner]]
+====Distribution====
 =====Om 2008.8=====
 *[[ASU Feature Plan]]
 *[[Userspace root image]]
@@ -175,6 +169,13 @@ __NOTOC__
 =====FSO=====
 *[[GPRS FSO]]
 *[[FSO ringtones]]
+
+====Application Guideline====
+*[[Minimo|Building Minimo web browser ]]
+*[[Devirginator]]
+*[[File transfer]]
+*[[Getting GPS console output with gllin]]
+*[[Getting Started with your Neo FreeRunner]]
 
 ===Application development tool===
 * [[Toolchain]]
