*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -157,7 +157,8 @@ __NOTOC__
 *[[Openmoko SMS Middleware]]
 *[[Zedlock]]
 *[[Navit]]
-====Distribution====
+====[[Distribution]]====
+* [[Qtopia on FreeRunner]]
 =====Om 2008.8=====
 *[[ASU Feature Plan]]
 *[[Userspace root image]]
