*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -82,6 +82,10 @@ __NOTOC__
 *[[Neo1973 as radio replacement]]
 </DIV>
 |}
+
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " | 
 ===FreeRunner (GTA02)===
 *[[GTA02 Openness]]
 *[[Neo FreeRunner]]
@@ -90,11 +94,13 @@ __NOTOC__
 *[[Prototypes]]
 *[[GTA02 WLAN]]
 
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " | 
+
 ===Openmoko Custom Build===
 *[[Openmoko-supported hardware]]
 *[[HXD8]]
 *[[Neo1973: GTA01Bv4 versus GTA02 comparison]]
-
+|}
 ==Software==
 
 ===U-boot===
