*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -27,8 +27,7 @@ __NOTOC__
 ===GTA01===
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
-<DIV ALIGN=LEFT>
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 *[[Neo1973]]
 *[[Neo1973 hardware]]
 *[[Disassembling Neo1973]]
@@ -55,11 +54,8 @@ __NOTOC__
 =====Accessory=====
 *[[Car phone holder for neo1973]]
 *[[Related Hardware]]
-</DIV>
 
-! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |
-<DIV ALIGN=LEFT>
-
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 =====Neo1973:Alternate Cases=====
 *[[Hardware:Neo1973:Alternate Cases]]
 *[[Hardware:Neo1973:Alternate Cases:Digital gaming]]
@@ -80,7 +76,7 @@ __NOTOC__
 *[[Hardware:Neo1973:Alternate Cases:Dual SIM ]]
 *[[Neo1973 as car gadget]]
 *[[Neo1973 as radio replacement]]
-</DIV>
+
 |}
 
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
