/* Import for ASU/Qtopia */

--- a/Import_Vcf_Contacts.mw
+++ b/Import_Vcf_Contacts.mw
@@ -132,10 +132,10 @@ Thanks to [[Import_Sim_Contacts]] for the original Python Script.
 == Import for ASU/Qtopia ==
 The Qtopia addressbook application supports import of VCF files out of the box:
 
-If you're in via SSH, run the following command first:
+If you're connected via SSH, run the following command first:
   export DISPLAY=:0
 
-Then to import your address book from VCard format:
+To import your address book from VCard format:
   LD_LIBRARY_PATH=/opt/Qtopia/lib /opt/Qtopia/bin/addressbook /home/root/addressbook.vcf
 
 You will be asked if you want to import the contacts form addressbook.vcf (the contact name will be taken from the "N:" vCard field).
