*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -159,7 +159,7 @@ __NOTOC__
 *[[Openmoko SMS Middleware]]
 *[[Zedlock]]
 *[[Navit]]
-====[[Distribution]]====
+====[[Distributions]]====
 * [[Qtopia on FreeRunner]]
 =====Om 2008.8=====
 *[[ASU Feature Plan]]
