--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -1,6 +1,6 @@
 This page explains how to boot a Freerunner from the (micro-)SD card rather than from the built-in NAND flash memory. The SD card shares a bus with the GPU, so it may not perform as well, but it is another option.
 
-{{Warning | Booting from SDHC may cause problems at this time (see appendix bellow) }} 
+{{Warning | Booting from SDHC may cause problems at this time. See [http://thread.gmane.org/gmane.comp.handhelds.openmoko.community/19154/focus=19281| this thread.]  }} 
 
 == How it Works ==
 
@@ -237,8 +237,6 @@ See also [[Moving current system from flash to SD]] which shows how to move the 
 == Appendix ==
 
 === Boot from SDHC ===
-
-WARNING: Booting from SDHC may cause problems at this time (See [http://thread.gmane.org/gmane.comp.handhelds.openmoko.community/19154/focus=19281 this thread])
 
 {{Note|the following text was written for the Neo1973. SDHC and SD should both work in a Freerunner if you have u-boot from 2008-07-23 or later.}}
 
