/* Boot from SDHC */ clarify to correct tense

--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -241,7 +241,7 @@ See also [[Moving current system from flash to SD]] which shows how to move the 
 
 {{Note|the following text was written for the Neo1973. SDHC and SD should both work in a Freerunner if you have u-boot from 2008-07-23 or later.}}
 
-As SDHC is currently not supported in u-boot you can't use the Booting from SD guide.
+As SDHC is not supported in older u-boot versions you can't use the Booting from SD guide.
 But there's a kind of workaround that is a good option to have at least your rootfs on the microSDHC:
 
 First you can follow Step 1 to get an kernel-image with mmc- and ext2-support. But instead of copying the image to the rootfs you will have to flash it to the Neo's internal NAND-Flash (using [[Dfu-util]]).
