--- a/Distributions.mw
+++ b/Distributions.mw
@@ -145,6 +145,8 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | XMPP Client || style="background:lightgreen;" | Yes (1) || ? || ? || ? || No || style="background:lightgreen;" | Yes
 |-
+| Media Player || ? || ? || ? || ? || ? || ? 
+|-
 |}
 
 === Toolkits / Runtimes ===
