*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -120,45 +120,7 @@ __NOTOC__
 *[[Repositories]]
 *[[Freerunner Software Status]]
 ====Applications====
-*[[User's Manual/Games/Net]]
-*[[Splinter]]
-*[[Lint-wifi]]
-*[[Mofi]]
-*[[Gutenflash]]
-*[[HP48 Series RPN Calculator]]
-*[[QtopiaOnX11]]
-*[[Calendar]]
-*[[Contacts]]
-*[[Music Player]]
-*[[Epdfview]]
-*[[Feed Reader]]
-*[[Dialer/2007.2]]
-*[[Messages]]
-*[[GPS Navigation]]
-*[[IM]]
-*[[Minimo]]
-*[[PyPenNotes]]
-*[[Search]]
-*[[Clock]]
-*[[Mokostat]]
-*[[Sample Native-Finger Application]]
-*[[Screen Grabber]]
-*[[Sketchbook]]
-*[[Frma71]]
-*[[Backup]]
-*[[Help Viewer]]
-*[[IM Presence]]
-*[[Media Player]]
-*[[MokoFEM]]
-*[[Mokopedia]]
-*[[Qtopia on Neo1973]]
-*[[MokoMakefile]]
-*[[Gutenflash]]
-*[[Orrery]]
-*[[Picture Viewer]]
-*[[Openmoko SMS Middleware]]
-*[[Zedlock]]
-*[[Navit]]
+{{app}}
 ====[[Distributions]]====
 * [[Qtopia on FreeRunner]]
 =====Om 2008.8=====
