Undo revision 46690 by [[Special:Contributions/Coolcat|Coolcat]] ([[User talk:Coolcat|Talk]])

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -1,48 +1,39 @@
 __NOTOC__
 ==Introduction Of Openmoko==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
+<div align=left>
 *[[Introduction]]
 *[[OpenmokoFramework]]
+*[[OpenmokoFramework/mickeyterm]]
 *[[Roadmap|Openmoko Roadmap]]
 *[[Meet_the_Core_Team|CoreTeam]]
 *[[Current events]]
 *[[Business Development]]
+</div>
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " | 
+<div align=left>
 *[[Trademark Policy]]
 *[[License]]
 *[[Development_resources|Development Resources]]
 *[[WhyOpenmoko]]
 *[[DailyBuiltImages]]
 *[[GUI Frameworks]]
+|}
 
 ==Hardware ==
-===Flash===
-*[[NAND Flash]]
-*[[Partition]]
-
-===Chip===
-*[[Hammerhead/Integrators]]
-*[[Samsung S3C2442B]]
-*[[Hardware:AGPS]]
-*[[GTA01 gsm modem]]
-
-===USB===
-*[[USB DFU]]
-*[[USB Product IDs]]
-*[[USB Networking]]
-
-===Adapter===
-*[[Amontec JTAGkey]]
-
-===Bluetooth ===
-*[[Bluetooth_Support|Manually using Bluetooth]]
-*[[ Bluetooth powered Multi-SIM support/Device Support]]
-
-==Hardware  Support==
+{{Hardware}}
 ===GTA01===
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 *[[Neo1973]]
 *[[Neo1973 hardware]]
 *[[Disassembling Neo1973]]
 *[[Neo1973 Phase 1]]
 *[[Getting Started with your Neo1973]]
+===Hardware component===
 =====Audio=====
 *[[Neo1973 audio subsystem]]
 *[[LM4857]]
@@ -50,12 +41,9 @@ __NOTOC__
 *[[Neo1973 Battery]]
 *[[Hardware:Neo1973:Alternate Cases:Extra battery]]
 *[[Neo1973 Battery Charger]]
-
 =====Power=====
 *[[Neo1973 Power Button]]
-
 *[[Neo1973 GTA01 Power Management]]
-
 =====USB=====
 *[[Neo1973 USB host]]
 =====Debug Board=====
@@ -63,12 +51,13 @@ __NOTOC__
 *[[Neo1973 Debug Board v3]]
 =====Development Board=====
 *[[QT2410]]
-
 =====Accessory=====
 *[[Car phone holder for neo1973]]
 *[[Related Hardware]]
 
-=====Alternate cases=====
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
+=====Neo1973:Alternate Cases=====
+*[[Hardware:Neo1973:Alternate Cases]]
 *[[Hardware:Neo1973:Alternate Cases:Digital gaming]]
 *[[Hardware:Neo1973:Alternate Cases:Analogue gaming]]
 *[[Hardware:Neo1973:Alternate Cases:Gaming docking station]]
@@ -88,6 +77,11 @@ __NOTOC__
 *[[Neo1973 as car gadget]]
 *[[Neo1973 as radio replacement]]
 
+|}
+
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 ===FreeRunner (GTA02)===
 *[[GTA02 Openness]]
 *[[Neo FreeRunner]]
@@ -96,11 +90,13 @@ __NOTOC__
 *[[Prototypes]]
 *[[GTA02 WLAN]]
 
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
+
 ===Openmoko Custom Build===
 *[[Openmoko-supported hardware]]
 *[[HXD8]]
 *[[Neo1973: GTA01Bv4 versus GTA02 comparison]]
-
+|}
 ==Software==
 
 ===U-boot===
@@ -124,44 +120,20 @@ __NOTOC__
 *[[Repositories]]
 *[[Freerunner Software Status]]
 ====Applications====
-*[[Gutenflash]]
-*[[HP48 Series RPN Calculator]]
-*[[QtopiaOnX11]]
-*[[Calendar]]
-*[[Contacts]]
-*[[Game]]
-*[[Guitar Tuning]]
-*[[Music Player]]
-*[[Epdfview]]
-*[[Feed Reader]]
-*[[File Browser]]
-*[[Dialer/2007.2]]
-*[[Messages]]
-*[[GPS Navigation]]
-*[[IM]]
-*[[Minimo]]
-*[[PyPenNotes]]
-*[[Search]]
-*[[Clock]]
-*[[Mokostat]]
-*[[Sample Native-Finger Application]]
-*[[Screen Grabber]]
-*[[Sketchbook]]
-*[[Frma71]]
-*[[Backup]]
-*[[Help Viewer]]
-*[[IM Presence]]
-*[[Media Player]]
-*[[MokoFEM]]
-*[[Mokopedia]]
-*[[Neo1973 host software]]
-*[[Qtopia on Neo1973]]
-*[[MokoMakefile]]
-*[[Gutenflash]]
-*[[Orrery]]
-*[[Picture Viewer]]
-*[[Openmoko SMS Middleware]]
-*[[Zedlock]]
+{{app}}
+====[[Distributions]]====
+* [[Qtopia on FreeRunner]]
+=====Om 2008.8=====
+*[[ASU Feature Plan]]
+*[[Userspace root image]]
+*[[Om2008.8 Locations]]
+*[[Om2008.8]]
+*[[Om2008.8 Installer]]
+*[[Om2008.8 Keyboard]]
+
+=====FSO=====
+*[[GPRS FSO]]
+*[[FSO ringtones]]
 
 ====Application Guideline====
 *[[Minimo|Building Minimo web browser ]]
@@ -169,7 +141,6 @@ __NOTOC__
 *[[File transfer]]
 *[[Getting GPS console output with gllin]]
 *[[Getting Started with your Neo FreeRunner]]
-*[[ASU Feature Plan]]
 
 ===Application development tool===
 * [[Toolchain]]
@@ -216,6 +187,8 @@ __NOTOC__
 *[[Finger Scrolling]]
 *[[File Open Dialog]]
 *[[UI Improvements]]
+====FSO UI====
+*[[FSO UI Tutorial]]
 
 =Test=
 
@@ -292,6 +265,9 @@ __NOTOC__
 *[[Boot from sd card]]
 
 ====Software Documentation====
+*[[Simyo pppd scripts]]
+*[[Vibrator]]
+*[[Voice-recording.state]]
 *[[Sshfs]]
 *[[USB Networking with openSUSE]]
 *[[Dfu-util-windows]]
@@ -305,7 +281,6 @@ __NOTOC__
 *[[Neo1973 and Windows]]
 *[[Technical:P2P Radio]]
 *[[Host-based development with Xoo and Xephyr ]]
-*[[MokoConfigurator|Moko Configuration]]
 *[[Customizing the Openmoko Distribution]]
 *[[Running Openmoko on PC]]
 *[[Flashing openmoko]]
@@ -314,7 +289,6 @@ __NOTOC__
 *[[Automatic emulation in Ubuntu]]
 *[[Boot sound]]
 *[[Building Gadget USB Module]]
-*[[Convert LongLat To Mercator]]
 *[[Forcing fast charge mode]]
 *[[CheckFastCharge-script]]
 *[[MacOS X]]
@@ -326,7 +300,6 @@ __NOTOC__
 *[[Booting from NFS]]
 *[[USB CDC ACM]]
 *[[Exporting hardware]]
-*[[Flashing in windows]]
 *[[Flashing openmoko/Known good kernel flash U-Boot output]]
 *[[Gsmd/document]]
 *[[Installing Pyroute]]
@@ -353,6 +326,7 @@ __NOTOC__
 *[[Available Packages]]
 
 *[[Switching Keyboards]]
+
 ====Training Programs====
 *[[Regular Training Programs]]
 
@@ -444,6 +418,8 @@ __NOTOC__
 *[[Mebot]]
 *[[Proposal for context management]]
 *[[MiLF interface]]
+*[[Wishlist:Software:GPS proxy]]
+*[[Server:WebProxy]]
 
 ===Calling Feature===
 *[[Wishlist:Least Cost Routing]]
@@ -463,6 +439,7 @@ __NOTOC__
 *[[Press Coverage]]
 
 ===Information===
+*[[Getting Openmoko]]
 *[[ChangeLog]]
 *[[DailyBuiltImages]]
 *[[External links]]
