--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -41,7 +41,7 @@ Either way you create your own meaning. It's about you.
 
 *  '''Use the [[Om2008.8_Installer|Installer]]''' to find apps and modifications for your Neo.
 *  '''Re-design themes''' by customizing your own [[Edje]] files.
-*  '''Source Codes''' are publicly available, allowing for customization all the way down to low level sytems.
+*  '''Source Codes''' are publicly available, allowing for customization all the way down to low level systems.
 
 === Share ===
 * share your locations  ([[Om2008.8_Locations|Locations]])
