--- a/Automatic_emulation_in_Ubuntu.mw
+++ b/Automatic_emulation_in_Ubuntu.mw
@@ -144,6 +144,7 @@ added application should be listed under a name which was choosen when building 
 
 == Problems ==
 If you have any problems, just add it here
+--[[User:twistedclone|twistedclone]]
 
 OS: Ubuntu 8.05
 I run the following sequence of commands to run my QEMU 
