--- a/Automatic_emulation_in_Ubuntu.mw
+++ b/Automatic_emulation_in_Ubuntu.mw
@@ -143,8 +143,8 @@ added application should be listed under a name which was choosen when building 
     make qemu
 
 == Problems ==
-If you have any problems, just add it here
---[[User:twistedclone|twistedclone]]
+If you have any problems, just add it here<br>
+--[[User:Twistedclone|Twistedclone]]
 
 OS: Ubuntu 8.05
 I run the following sequence of commands to run my QEMU 
@@ -156,11 +156,11 @@ $ ./configure --target-list=arm-softmmu --cc=/usr/bin/gcc-3.4
 $ make
 $ openmoko/download.sh
 $ openmoko/flash.sh
-$ arm-softmmu/qemu-system-arm -M gta01 -m 130 -mtdblock openmoko/openmoko-flash.image -kernel openmoko/openmoko-kernel.bin -usb -show-cursor
+$ arm-softmmu/qemu-system-arm -M gta01 -m 130 -mtdblock openmoko/openmoko-flash.image -kernel openmoko/openmoko-kernel.bin -usb -show-cursor<br>
 
-Emulator appears with Boot menu.
-While Booting it get hanged out with the following errors
-_______________________Errors or Emulator Screen_______________
+Emulator appears with Boot menu.<br>
+While Booting it get hanged out with the following errors<br>
+_______________________Errors or Emulator Screen_______________<br>
 sc32410-sdi sc32410-sdi : CMD[FAIL(-100)] #2 op:CMD8
 error: command timeout
 ...
@@ -170,9 +170,9 @@ Freeing init memory: 128kb
 /bin/sh: can't access tty; Job Control Tunned off
 / #JFFS2 notice: (227) check_node_data: wrong data CRC in data node at 0x00899b4c: read d5ebdb50 calculated 0x880615c2
 JFFS2 warning: (227) jffs2_do_read_inode_internal: Truncating into #1111 to 71415
-56 bytes failed because it only had 2510848 bytes to start with 
+56 bytes failed because it only had 2510848 bytes to start with <br>
 
-_______________Errors on Terminal_______________
+_______________Errors on Terminal_______________<br>
 qasim@qasim-desktop:~/openmoko/qemu-neo1973$ arm-softmmu/qemu-system-arm -M gta01 -m 130 -mtdblock openmoko/openmoko-flash.image -kernel openmoko/openmoko-kernel.bin -usb -show-cursor
 neo_gsm_switch: GSM disabled.
 pcf_write: charging in Qualification Mode.
@@ -195,8 +195,8 @@ s3c_mmci_writew: Bad register 0x38
 s3c_mmci_writew: Bad register 0x38
 s3c_mmci_writew: Bad register 0x38
 s3c_mmci_writew: Bad register 0x38
-neo_bl_intensity: LCD Backlight now at 0/64.
-________________________________________________________________
+neo_bl_intensity: LCD Backlight now at 0/64.<br>
+________________________________________________________________<br>
 Does anyone has any idea how to fix this up?
 
 
