/* Possible Participants */  Added myself.

--- a/Openmoko_Local_Groups:_Dortmund.mw
+++ b/Openmoko_Local_Groups:_Dortmund.mw
@@ -15,6 +15,14 @@
 |/*no comment*/
 |ordered Freerunner
 |no
+|-
+|[[User:tobyS|TobyS]]
+|Software Developer
+|Owning a Freerunner.
+|Dortmund
+|Member of the PHP Usergroup (see below)
+|yes
+|no
 |}
 
 [[Category:Openmoko Local Groups]]
