--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -120,7 +120,61 @@ __NOTOC__
 *[[Repositories]]
 *[[Freerunner Software Status]]
 ====Applications====
-{{app}}
+{| class="wikitable" cellspacing="10" cellpadding="10" width=100%
+! width=50% style="background:#ffffff;border-left:0px solid white;border-right:0px solid ffffff;border-top:0px solid ffffff; border:1px solid #ffffff;" |
+|-
+|valign="TOP" style="background:#ffffff;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #eeeeee; " | 
+<div align=left>
+=====Om2007.2=====
+* [[Gutenflash]]
+* [[Calendar]]
+* [[Contacts]]
+* [[Music Player]]
+* [[Epdfview]]
+* [[Feed Reader]]
+* [[Dialer/2007.2]]
+* [[Messages]]
+* [[GPS Navigation]]
+* [[IM]]
+* [[Minimo]]
+* [[PyPenNotes]]
+* [[Search]]
+* [[Clock]]
+* [[Mokostat]]
+* [[Sample Native-Finger Application]]
+* [[Screen Grabber]]
+* [[Sketchbook]]
+* [[Frma71]]
+* [[Backup]]
+* [[Help Viewer]]
+* [[IM Presence]]
+* [[Media Player]]
+* [[MokoFEM]]
+* [[Mokopedia]]
+* [[Gutenflash]]
+* [[Orrery]]
+* [[Picture Viewer]]
+* [[Openmoko SMS Middleware]]
+* [[Zedlock]]
+
+
+</div>
+|valign="TOP" style="background:#ffffff;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #eeeeee; " | 
+<div align=left>
+
+====Om2008.2====
+* [[Splinter|Splinter-GPS Application]]
+* [[Navit|Navit -GPS Application]]
+* [[Lint-wifi|Lint-Wifi:Wifi Networking tool]]
+* [[Mofi|Mofi:Networking tool]]
+* [[HP48 Series RPN Calculator]]
+* [[Tichy]]
+* [[Om2008.8 Keyboard]]
+* [[Om2008.8 Sudoku]]
+
+
+</div>
+|}
 ====[[Distributions]]====
 * [[Qtopia on FreeRunner]]
 =====Om 2008.8=====
