--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -76,7 +76,6 @@ __NOTOC__
 *[[Hardware:Neo1973:Alternate Cases:Dual SIM ]]
 *[[Neo1973 as car gadget]]
 *[[Neo1973 as radio replacement]]
-
 |}
 
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
@@ -120,10 +119,11 @@ __NOTOC__
 *[[Repositories]]
 *[[Freerunner Software Status]]
 ====Applications====
-{| class="wikitable" cellspacing="10" cellpadding="10" width=100%
-! width=50% style="background:#ffffff;border-left:0px solid white;border-right:0px solid ffffff;border-top:0px solid ffffff; border:1px solid #ffffff;" |
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
-|valign="TOP" style="background:#ffffff;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #eeeeee; " | 
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
+|-
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 <div align=left>
 =====Om2007.2=====
 * [[Gutenflash]]
@@ -157,10 +157,7 @@ __NOTOC__
 * [[Openmoko SMS Middleware]]
 * [[Zedlock]]
 
-
-</div>
-|valign="TOP" style="background:#ffffff;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #eeeeee; " | 
-<div align=left>
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 
 ====Om2008.2====
 * [[Splinter|Splinter-GPS Application]]
@@ -172,9 +169,11 @@ __NOTOC__
 * [[Om2008.8 Keyboard]]
 * [[Om2008.8 Sudoku]]
 
-
-</div>
 |}
+
+
+
+
 ====[[Distributions]]====
 * [[Qtopia on FreeRunner]]
 =====Om 2008.8=====
