/* Possible Participants */ Use appropriate graphics.

--- a/Openmoko_Local_Groups:_Dortmund.mw
+++ b/Openmoko_Local_Groups:_Dortmund.mw
@@ -13,16 +13,16 @@
 |I just ordered the Freerunner, want to use/develop GPS software on it.
 |Dortmund
 |/*no comment*/
-|ordered Freerunner
-|no
+|
+|
 |-
 |[[User:tobyS|TobyS]]
 |Software Developer
 |Owning a Freerunner. Several more or less crazy development ideas.
 |Dortmund
 |Member of the PHP Usergroup (see below)
-|yes
-|no
+|[[Image: Moko.jpg|center]]
+|
 |}
 
 === Intermediate meeting point ===
