--- a/Openmoko_Local_Groups:_Dortmund.mw
+++ b/Openmoko_Local_Groups:_Dortmund.mw
@@ -27,6 +27,6 @@
 
 === Intermediate meeting point ===
 
-Several members of the local [http://phpugdo.de PHP Usergroup] ow a Freerunner and are intetressted in developing applications for it and sharing experiences about usage and development. If you want to meet other OpenMoko enthusiasts, don't hesitate to drop by the [http://phpugdo.de/dabei_sein.html regular meeting], which takes place every Thursday from 18:30 in the [http://www.hicc-up.de/ HiccUp] bar/restaurant. Don't forget to bring your Freerunner and/or notebook (wifi and power available). More detailed information on the [http://phpugdo.de PHP Usergroup Dortmund] website.
+Several members of the local [http://phpugdo.de PHP Usergroup] own a Freerunner and are intetressted in developing applications for it and sharing experiences about usage and development. If you want to meet other OpenMoko enthusiasts, don't hesitate to drop by the [http://phpugdo.de/dabei_sein.html regular meeting], which takes place every Thursday from 18:30 in the [http://www.hicc-up.de/ HiccUp] bar/restaurant. Don't forget to bring your Freerunner and/or notebook (wifi and power available). More detailed information on the [http://phpugdo.de PHP Usergroup Dortmund] website.
 
 [[Category:Openmoko Local Groups]]
